--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=f5f7cc4a598c124c4943ab26e4bc56e4
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://postgres:password@localhost:5433/legal_tech_clm_project"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -38,3 +38,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+APP_ENV=dev
+APP_DEBUG=1
+# Ignore deprecation warnings
+SYMFONY_DEPRECATIONS_HELPER=weak
