--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,10 +1,13 @@
-easy_admin:
-    # liste des entités que vous voulez gérer
+# config/packages/easy_admin.yaml
 
+easy_admin:
+    design:
+        menu:
+            - { label: 'Dashboard', icon: 'fa fa-dashboard', route: 'easyadmin' }
+            - { label: 'Tâches', icon: 'fa fa-tasks', route: 'easyadmin', routeParameters: { entity: 'Tache' } }
     user:
         display_name: true
-        name_property_path: 'userName'
-
+        name_property_path: 'username'
     entities:
         User:
             class: App\Entity\User
@@ -14,3 +17,4 @@ easy_admin:
             class: App\Entity\Document
         Tache:
             class: App\Entity\Tache
+            controller: App\Controller\Admin\TacheCrudController
