--- a/.env
+++ b/.env
@@ -25,7 +25,8 @@ APP_SECRET=f5f7cc4a598c124c4943ab26e4bc56e4
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://postgres:password@localhost:5433/legal_tech_clm_project"
+DATABASE_URL="pgsql://macbook:password@localhost:5432/postgres"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
