add graphique dashboard

--- a/.env
+++ b/.env
@@ -43,3 +43,13 @@ APP_ENV=dev
 APP_DEBUG=1
 # Ignore deprecation warnings
 SYMFONY_DEPRECATIONS_HELPER=weak
+
+###> google/apiclient ###
+GOOGLE_API_KEY=AIzaSyDh0_DhjvFENKCN0D15H5IXFS15qnNjw5I
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
+###< google/apiclient ###
+GOOGLE_CLIENT_SECRET_PATH=client_secret_925847879140-efrj2brtu8rs7oorlkkdbbt0tsvb2igm.apps.googleusercontent.com.json
+
+
