--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "^4.10",
+        "google/apiclient": "*",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "sensio/framework-extra-bundle": "^6.2",
@@ -20,7 +21,7 @@
         "symfony/doctrine-messenger": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/expression-language": "6.1.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.0",
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
         "symfony/http-client": "6.1.*",
@@ -39,11 +40,16 @@
         "symfony/translation": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/ux-chartjs": "*",
+        "symfony/ux-turbo": "*",
+        "symfony/ux-twig-component": "^2.19",
         "symfony/validator": "6.1.*",
+        "symfony/var-dumper": "6.1.*",
         "symfony/web-link": "6.1.*",
+        "symfony/workflow": "6.1.*",
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "vich/uploader-bundle": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
@@ -104,7 +110,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.1.*"
         }
     }
