--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "symfony/web-link": "6.1.*",
         "symfony/workflow": "6.1.*",
         "symfony/yaml": "6.1.*",
+        "tattali/calendar-bundle": "*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "*"
