--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
     "@vitejs/plugin-vue": "^5.1.3",
     "chart.js": "^4.4.4",
     "vite-node": "^2.0.5",
@@ -24,7 +26,7 @@
     "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
     "core-js": "^3.38.1",
     "sass-loader": "10.2.0",
-    "vite": "^5.4.3",
+    "vite": "^5.4.5",
     "vite-plugin-symfony": "^7.0.4"
   }
 }
